$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-11-19 [O] Adjusted/added maxlength parameter for album title/keyword according to database types (thread ID 67671) {eenemeenemuu}
2010-11-19 [O] Consistent use of plugin hook types 'action' and 'filter' (thread ID 67630) {eenemeenemuu}
2010-11-14 [B] Fixed comment approval when editing comments (thread ID 68066) {Nibbler}
2010-11-13 [O] Changed favourites zip download to build on disk instead of in memory {Nibbler}
2010-11-10 [B] Fixed picture manager - show user created albums in public categories (thread ID 67937) {eenemeenemuu}
2010-11-05 [C] Fixed error message when entering invalid email address in profile manager (thread ID 67903) {eenemeenemuu}
2010-11-05 [C] Fixed spelling of ImageMagick (thread ID 67902) {eenemeenemuu}
2010-11-04 [B] Removed declaration of function 'cpg_folder_file_delete' from update.php (thread ID 65708) {eenemeenemuu}
2010-11-04 [B] Fixed picture resizing via admin tools (thread ID 66802) {eenemeenemuu}
2010-11-04 [B] Removed value 'SERVER_PROTOCOL' from client ID generator (thread ID 59698) {eenemeenemuu}
2010-11-02 [C] Added label for 'remember me' checkbox (thread ID 67840) {eenemeenemuu}
2010-11-01 [B] Skip unknown file types during batch-add process (thread ID 67815) {eenemeenemuu}
2010-10-28 [B] Fixed issue with 'User Gallery Alphabetic Tabbing' plugin when bridged (thread ID 66905) {eenemeenemuu}
2010-10-22 [B] Fixed default selection of check boxes for batch-add (thread ID 67107) {eenemeenemuu}
2010-10-14 [A] Added plugin hooks 'after_edit_file', 'upload_html_pre_move' and 'upload_swf_pre_move' (thread ID 60896) {eenemeenemuu}